--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>sapharodon.github.io</title>
+            <title>Dolmen Walk</title>
         </head>
     <body>
         <h1>Hello, World!</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>Hey there! If you're reading this, you've somehow come across my little webpage hosted via GitHub Pages!</p>
+        <p>I'll eventually reupload and host Dolmen Walk here. I took it down from MSPFA because I didn't like the site interface, and I don't like the idea of my webcomic being on a host that isn't my own.</p>
+        <p>(Chapter 1 is still available for download on itch.io.)</p>
+        <p>In the meantime, this place will look a little bit blank. But hey, at least it exists!</p>
+        <p>(How <i>did</i> you find this place, anyways?)</p>
     </body>
 </html>
